--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
-@import url("https://fonts.googleapis.com/css2?family=EB+Garamond&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Bellefair&display=swap");
 
 * {
-  font-family: "EB Garamond", serif;
+  font-family: "Bellefair", serif;
 }
 
 .content {
