--- a/src/information/information.css
+++ b/src/information/information.css
@@ -38,6 +38,8 @@
   margin-right: auto !important;
   color: gray !important;
   border: 1px solid gray !important;
+  background-color: white !important;
+  text-decoration: none !important;
 }
 
 .gridItem {
